<resources>
    <string name="app_name">WeatherApp</string>
    <string name="today">Сегодня</string>
    <string name="week">Неделя</string>
    <string name="city">Город</string>
    <string name="cityHint">Введите город</string>
    <string name="temp">Темп</string>
    <string name="desc">Описание</string>
    <string name="date">Дата</string>
    <string name="location">По локации</string>
    <string name="name">По городу</string>
    <string name="title_enable_gps">Enable GPS</string>
    <string name="desc_enable_gps">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="btn_settings">Open Settings</string>
    <string name="btn_cancel">Cancel</string>
</resources>