<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50sp"
    android:layout_margin="5sp">

    <ImageView
        android:id="@+id/iconWeather"
        android:layout_width="64px"
        android:layout_height="64px"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="90sp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".3" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="5sp"
        android:text="@string/date"
        android:textColor="#212121"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iconWeather"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="130sp"
        android:text="@string/temp"
        android:textColor="#212121"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/textDate"
        app:layout_constraintStart_toStartOf="@+id/textDate"
        app:layout_constraintTop_toBottomOf="@+id/textDate" />

    <TextView
        android:id="@+id/textDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="190sp"
        android:text="@string/desc"
        android:textColor="#212121"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/textTemp"
        app:layout_constraintStart_toStartOf="@+id/textTemp"
        app:layout_constraintTop_toBottomOf="@+id/textTemp" />

</androidx.cardview.widget.CardView>

